--- a/LightYears/CmakeLists.txt
+++ b/LightYears/CmakeLists.txt
@@ -1,3 +1,29 @@
 add_executable(${LIGHT_YEARS_GAME_TARGET_NAME}
 	${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp
 )
+
+target_link_libraries(
+	${LIGHT_YEARS_GAME_TARGET_NAME} PUBLIC ${SFML_LIBRARY_INCLUDES}
+)
+
+# Define SFML library paths
+#set(SFML_LIBRARY_PATH "${CMAKE_CURRENT_SOURCE_DIR}/build/_deps/sfml-build/lib")  # Update this to your actual SFML lib path
+
+function(CopyLibToTarget LIB_NAME TARGET_NAME)
+	add_custom_command(TARGET ${TARGET_NAME}
+	POST_BUILD
+	COMMAND ${CMAKE_COMMAND} -E copy_if_different
+		$<TARGET_FILE:${LIB_NAME}>
+		$<TARGET_FILE_DIR:${TARGET_NAME}>
+	)
+endfunction()
+
+
+# Copy each SFML library after build
+CopyLibToTarget(sfml-graphics ${LIGHT_YEARS_GAME_TARGET_NAME})
+CopyLibToTarget(sfml-window ${LIGHT_YEARS_GAME_TARGET_NAME})
+CopyLibToTarget(sfml-system ${LIGHT_YEARS_GAME_TARGET_NAME})
+CopyLibToTarget(sfml-audio ${LIGHT_YEARS_GAME_TARGET_NAME})
+CopyLibToTarget(sfml-network ${LIGHT_YEARS_GAME_TARGET_NAME})
+
+
