--- a/LightYears/CmakeLists.txt
+++ b/LightYears/CmakeLists.txt
@@ -9,12 +9,47 @@ add_executable(${LIGHT_YEARS_GAME_TARGET_NAME}
 target_include_directories(${LIGHT_YEARS_GAME_TARGET_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 
+
+
+
+include(FetchContent)
+set(SFML_LIBRARY_NAME SFML)
+set(SFML_LIBRARY_INCLUDES
+    sfml-graphics
+    sfml-main
+    sfml-system
+    sfml-network
+    sfml-audio
+)
+
+FetchContent_Declare(
+	${SFML_LIBRARY_NAME}
+	GIT_REPOSITORY https://github.com/SFML/SFML
+	GIT_TAG 2.5.1
+	GIT_SHALLOW FALSE
+)
+
 target_link_libraries(
 	${LIGHT_YEARS_GAME_TARGET_NAME} PUBLIC ${SFML_LIBRARY_INCLUDES}
 )
 
-# Define SFML library paths
-#set(SFML_LIBRARY_PATH "${CMAKE_CURRENT_SOURCE_DIR}/build/_deps/sfml-build/lib")  # Update this to your actual SFML lib path
+#FetchContent_MakeAvailable(${SFML_LIBRARY_NAME})
+FetchContent_MakeAvailable(SFML)
+
+# box2d
+set(BOX2D_LIBRARY_NAME Box2D)
+
+FetchContent_Declare(
+	${BOX2D_LIBRARY_NAME}
+	GIT_REPOSITORY https://github.com/erincatto/box2d
+	GIT_TAG v2.4.1
+	GIT_SHALLOW FALSE
+)
+
+FetchContent_MakeAvailable(${BOX2D_LIBRARY_NAME})
+target_link_libraries(
+	${LIGHT_YEARS_GAME_TARGET_NAME} PUBLIC box2d
+)
 
 function(CopyLibToTarget LIB_NAME TARGET_NAME)
 	add_custom_command(TARGET ${TARGET_NAME}
@@ -32,5 +67,7 @@ CopyLibToTarget(sfml-window ${LIGHT_YEARS_GAME_TARGET_NAME})
 CopyLibToTarget(sfml-system ${LIGHT_YEARS_GAME_TARGET_NAME})
 CopyLibToTarget(sfml-audio ${LIGHT_YEARS_GAME_TARGET_NAME})
 CopyLibToTarget(sfml-network ${LIGHT_YEARS_GAME_TARGET_NAME})
+
+CopyLibToTarget(box2d ${LIGHT_YEARS_GAME_TARGET_NAME})
 
 
