Removed main.cpp, made the light years game engine and linked, updated CMake files, created GameApplication

--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -11,10 +11,12 @@ set(CMAKE_CXX_EXTENSIONS 		OFF)
 
 
 # create a variable for title name.
+set(LIGHT_YEARS_ENGINE_TARGET_NAME LightYearsEngine)
 set(LIGHT_YEARS_GAME_TARGET_NAME LightYearsGame)
 
-# this call this cmakelist beside the src files !!! inside the otehr cmakelist there is the target linkers
-add_subdirectory(LightYears)
+# this call this cmakelist beside the src files !!! inside the other cmakelist there is the target linkers
+add_subdirectory(LightYearsEngine)
+add_subdirectory(LightYearsGame)
 
 
 
