--- a/LightYearsEngine/CmakeLists.txt
+++ b/LightYearsEngine/CmakeLists.txt
@@ -6,7 +6,13 @@ add_library(${LIGHT_YEARS_ENGINE_TARGET_NAME} STATIC
 	${CMAKE_CURRENT_SOURCE_DIR}/include/EntryPoint.h
 	${CMAKE_CURRENT_SOURCE_DIR}/src/EntryPoint.cpp
 
+	${CMAKE_CURRENT_SOURCE_DIR}/include/framework/Core.h
+	${CMAKE_CURRENT_SOURCE_DIR}/src/framework/Core.cpp
+
+
+
 )
+
 
 # add custom include for headers
 target_include_directories(${LIGHT_YEARS_ENGINE_TARGET_NAME}
