--- a/LightYearsGame/CmakeLists.txt
+++ b/LightYearsGame/CmakeLists.txt
@@ -9,6 +9,8 @@ message(STATUS "Creating executable for ${LIGHT_YEARS_GAME_TARGET_NAME}")
 add_executable(${LIGHT_YEARS_GAME_TARGET_NAME}
     ${CMAKE_CURRENT_SOURCE_DIR}/include/gameFramework/GameApplication.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/gameFramework/GameApplication.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/config.h.in
+
 )
 
 # Debugging: Check if the game executable was created successfully
@@ -49,3 +51,25 @@ endfunction()
 message(STATUS "Copying SFML libraries after build")
 CopyLibDirectoryToTarget(${LIGHT_YEARS_ENGINE_TARGET_NAME} ${LIGHT_YEARS_GAME_TARGET_NAME})
 
+# setting up a asset folder for the game
+# Set asset folder name and source directory
+set(RESOURCE_FOLDER_NAME "assets")
+set(RESOURCE_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/${RESOURCE_FOLDER_NAME}")
+
+# Set up the custom command to copy the assets directory after building
+add_custom_command(
+    TARGET ${LIGHT_YEARS_GAME_TARGET_NAME}
+    POST_BUILD
+    COMMAND
+    ${CMAKE_COMMAND} -E copy_directory
+    ${RESOURCE_SRC_DIR}
+    $<TARGET_FILE_DIR:${LIGHT_YEARS_GAME_TARGET_NAME}>/${RESOURCE_FOLDER_NAME}
+)
+
+# Pass the folder names to the config.h.in for substitution
+configure_file(
+    "config.h.in"
+    "${CMAKE_CURRENT_SOURCE_DIR}/include/config.h"
+    ESCAPE_QUOTES
+
+)
