--- a/LightYearsGame/CmakeLists.txt
+++ b/LightYearsGame/CmakeLists.txt
@@ -10,6 +10,10 @@ add_executable(${LIGHT_YEARS_GAME_TARGET_NAME}
     ${CMAKE_CURRENT_SOURCE_DIR}/include/gameFramework/GameApplication.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/gameFramework/GameApplication.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/config.h.in
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/spaceship/Spaceship.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/spaceship/Spaceship.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/player/PlayerSpaceship.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/player/PlayerSpaceship.cpp
 
 )
 
